--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>{{ person_name }} | The Burrow Owls</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -33,6 +34,11 @@
           </a>
         {% endfor %}
       </div>
+
+      <hr>
+
+      <a class="nav" href="/{{ person_key }}/art">Art</a>
+      <a class="nav sub" href="/{{ person_key }}/art/upload">Upload art</a>
     </aside>
 
     <main class="content">
