--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <title>{{ person_name }} | The Burrow Owls</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='owl.ico') }}">
 </head>
 <body>
   <div class="layout">
