--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,9 @@
 
         <a class="nav" href="/{{ person_key }}/art">Art</a>
         <a class="nav sub" href="/{{ person_key }}/art/upload">Upload Art</a>
+
+        <!-- NEW: Audiobooks -->
+        <a class="nav sub" href="/{{ person_key }}/audiobooks">Audiobooks</a>
       {% endif %}
     </aside>
 
